refactor: move config and i18n messages out of the lib directory

--- a/src/components/app/Footer.astro
+++ b/src/components/app/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import Article from '@components/ui/Article.astro';
-import { LOCALE } from '@lib/config/locale.ts';
-import { getLocale } from '@lib/i18n/index.ts';
+import { LOCALE } from '@config/locale.ts';
+import { getLocale } from '@i18n/index.ts';
 import { assertDefined, keysOf, wKey } from '@utils/index.ts';
 import type { HTMLAttributes } from 'astro/types';
 import { getEntry } from 'astro:content';
