--- a/src/components/app/Loader.astro
+++ b/src/components/app/Loader.astro
@@ -1,6 +1,6 @@
 ---
-import { LOCALE } from '@lib/config/locale.ts';
-import { getLocaleStrings } from '@lib/i18n/index.ts';
+import { LOCALE } from '@config/locale.ts';
+import { getLocaleStrings } from '@i18n/index.ts';
 import type { WithChildren } from '../../types.ts';
 
 /**
