--- a/src/components/app/home/Nav.astro
+++ b/src/components/app/home/Nav.astro
@@ -1,8 +1,8 @@
 ---
 import ButtonLink from '@components/ui/ButtonLink.astro';
 import Card from '@components/ui/Card.astro';
-import { SITE } from '@lib/config/site.ts';
-import { getLocaleStrings } from '@lib/i18n/index.ts';
+import { SITE } from '@config/site.ts';
+import { getLocaleStrings } from '@i18n/index.ts';
 import {
 	CircleEllipsis,
 	Github,
