--- a/src/components/app/home/OutputGroup.astro
+++ b/src/components/app/home/OutputGroup.astro
@@ -1,6 +1,6 @@
 ---
 import Form from '@components/ui/Form.astro';
-import { OUTPUT } from '@lib/config/output.ts';
+import { OUTPUT } from '@config/output.ts';
 import { wKey } from '@utils/index.ts';
 import LabelledOutput from './LabelledOutput.astro';
 
