--- a/src/components/ui/Alert.astro
+++ b/src/components/ui/Alert.astro
@@ -1,5 +1,5 @@
 ---
-import { getLocaleStrings } from '@lib/i18n/index.ts';
+import { getLocaleStrings } from '@i18n/index.ts';
 import { Info } from '@lucide/astro';
 import type { HTMLAttributes } from 'astro/types';
 import type { WithChildren } from '../../types.ts';
