--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -5,9 +5,9 @@ import CounterInput from '@components/app/home/CounterInput.astro';
 import CounterOutputs from '@components/app/home/CounterOutputs.astro';
 import Nav from '@components/app/home/Nav.astro';
 import Article from '@components/ui/Article.astro';
+import { LOCALE } from '@config/locale.ts';
+import { getLocale } from '@i18n/index.ts';
 import BaseLayout from '@layouts/BaseLayout.astro';
-import { LOCALE } from '@lib/config/locale.ts';
-import { getLocale } from '@lib/i18n';
 import { assertDefined } from '@utils/index.ts';
 import { getEntry } from 'astro:content';
 import type { WithChildren } from '../types.ts';
