--- a/src/layouts/SocialImageMetadata.astro
+++ b/src/layouts/SocialImageMetadata.astro
@@ -2,8 +2,8 @@
 import {
 	SOCIAL_PREVIEW,
 	type SocialPreviewId,
-} from '@lib/config/social-preview.ts';
-import { getLocale } from '@lib/i18n/index.ts';
+} from '@config/social-preview.ts';
+import { getLocale } from '@i18n/index.ts';
 import { keysOf, pathToAbsoluteUrl } from '@utils/index.ts';
 import { getImage } from 'astro:assets';
 import type { WithChildren } from '../types.ts';
