--- a/src/pages/[localeId]/index.astro
+++ b/src/pages/[localeId]/index.astro
@@ -1,6 +1,6 @@
 ---
+import { LOCALE } from '@config/locale.ts';
 import HomeLayout from '@layouts/HomeLayout.astro';
-import { LOCALE } from '@lib/config/locale.ts';
 import { keysOf } from '@utils/index.ts';
 
 export function getStaticPaths() {
