--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 </style>
 
 <script>
-	import { getBestMatchingLocale } from '@lib/i18n/index.ts';
+	import { getBestMatchingLocale } from '@i18n/index.ts';
 
 	const detectedLocale = getBestMatchingLocale();
 
