--- a/src/components/app/home/LabelledOutput.astro
+++ b/src/components/app/home/LabelledOutput.astro
@@ -1,8 +1,8 @@
 ---
 import Label from '@components/ui/Label.astro';
 import Output from '@components/ui/Output.astro';
-import type { OutputId } from '@lib/config/output.ts';
-import { getLocaleStrings } from '@lib/i18n/index.ts';
+import type { OutputId } from '@config/output.ts';
+import { getLocaleStrings } from '@i18n/index.ts';
 import { wKey } from '@utils/index.ts';
 import type { WithChildren } from '../../../types.ts';
 
