--- a/src/components/ui/Article.astro
+++ b/src/components/ui/Article.astro
@@ -1,6 +1,6 @@
 ---
-import { SITE } from '@lib/config/site.ts';
-import { getLocaleStrings } from '@lib/i18n/index.ts';
+import { SITE } from '@config/site.ts';
+import { getLocaleStrings } from '@i18n/index.ts';
 import { wKey } from '@utils/index.ts';
 import type { CollectionEntry, CollectionKey } from 'astro:content';
 import { render } from 'astro:content';
