--- a/src/components/ui/Output.astro
+++ b/src/components/ui/Output.astro
@@ -1,7 +1,7 @@
 ---
-import { INPUT } from '@lib/config/input.ts';
-import type { OutputId } from '@lib/config/output.ts';
-import { getLocaleStrings } from '@lib/i18n/index.ts';
+import { INPUT } from '@config/input.ts';
+import type { OutputId } from '@config/output.ts';
+import { getLocaleStrings } from '@i18n/index.ts';
 import { wKey } from '@utils/index.ts';
 import type { HTMLAttributes } from 'astro/types';
 import type { WithChildren } from '../../types.ts';
