--- a/src/pages/[localeId]/preview/[type].astro
+++ b/src/pages/[localeId]/preview/[type].astro
@@ -1,7 +1,7 @@
 ---
+import { LOCALE } from '@config/locale.ts';
+import { SOCIAL_PREVIEW } from '@config/social-preview.ts';
 import SocialPreviewLayout from '@layouts/SocialPreviewLayout.astro';
-import { LOCALE } from '@lib/config/locale.ts';
-import { SOCIAL_PREVIEW } from '@lib/config/social-preview.ts';
 import { keysOf } from '@utils/index.ts';
 import { cartesianProduct } from 'radashi';
 
