fix: social image drop shadow not being applied

--- a/src/layouts/SocialPreviewLayout.astro
+++ b/src/layouts/SocialPreviewLayout.astro
@@ -48,7 +48,7 @@ const { type } = Astro.props;
 
 <style>
 	/* Use stronger shadows than the default */
-	body {
+	body.enable-transitions {
 		--shadow: oklch(0 0 0);
 	}
 
