fix: theme option background gradient not being applied

--- a/src/components/app/Loader.astro
+++ b/src/components/app/Loader.astro
@@ -70,7 +70,7 @@ const msg = getLocaleStrings(LOCALE.default).loader.label;
 	.slide i:before {
 		content: '';
 		position: absolute;
-		background: var(--tool);
+		background-color: var(--tool);
 	}
 
 	.slide:before {
@@ -95,7 +95,7 @@ const msg = getLocaleStrings(LOCALE.default).loader.label;
 		width: 6px;
 		height: 4px;
 		top: 4px;
-		background: var(--tool);
+		background-color: var(--tool);
 	}
 
 	.slide i:before {
@@ -113,7 +113,7 @@ const msg = getLocaleStrings(LOCALE.default).loader.label;
 		width: 40px;
 		height: 46px;
 		border-radius: 5px;
-		background: var(--paper);
+		background-color: var(--paper);
 		transform: translateY(46px);
 		animation: paper var(--duration) linear infinite;
 	}
@@ -127,7 +127,7 @@ const msg = getLocaleStrings(LOCALE.default).loader.label;
 		border-radius: 2px;
 		height: 4px;
 		transform: scaleY(0.8);
-		background: var(--text);
+		background-color: var(--text);
 		box-shadow:
 			0 12px 0 var(--text),
 			0 24px 0 var(--text),
