--- a/src/components/ui/Label.astro
+++ b/src/components/ui/Label.astro
@@ -23,7 +23,7 @@ const props = Astro.props;
 		flex-basis: calc(50% - 2 * var(--p-sm));
 		flex-grow: 1;
 		padding: var(--p-sm);
-		background: var(--bg-1);
+		background-color: var(--bg-1);
 		color: var(--fg);
 		text-align: center;
 		white-space: nowrap;
@@ -48,7 +48,7 @@ const props = Astro.props;
 		/* Applies to both radio and checkbox inputs */
 		&:has(> input:checked) {
 			font-weight: var(--bolder);
-			background: var(--bg-3);
+			background-color: var(--bg-3);
 			box-shadow: var(--box-shadow-md);
 			opacity: 1;
 			box-shadow: var(--box-shadow-md);
