--- a/src/components/ui/ButtonLink.astro
+++ b/src/components/ui/ButtonLink.astro
@@ -33,7 +33,7 @@ const { icon: Icon, label, ...restProps } = Astro.props;
 		gap: var(--p-xs);
 		flex-grow: 1;
 		padding: var(--p-sm);
-		background: var(--bg-2);
+		background-color: var(--bg-2);
 		color: var(--fg);
 		text-align: center;
 		white-space: nowrap;
