perf: shorten CSS variables names and remove unused styles

--- a/src/components/app/Footer.astro
+++ b/src/components/app/Footer.astro
@@ -47,7 +47,7 @@ const props = Astro.props;
 		box-sizing: border-box;
 		padding: var(--p-lg);
 		background-color: var(--bg-2);
-		box-shadow: var(--box-shadow-md);
+		box-shadow: var(--s-box-md);
 		view-transition-name: footer;
 
 		> * {
