--- a/src/components/ui/Card.astro
+++ b/src/components/ui/Card.astro
@@ -19,8 +19,8 @@ const { as: Tag = 'div', ...restProps } = Astro.props;
 
 <style>
 	* {
-		border-radius: var(--radius-md);
-		box-shadow: var(--box-shadow-md);
+		border-radius: var(--r-md);
+		box-shadow: var(--s-box-md);
 		overflow: hidden;
 		contain: paint;
 
