--- a/src/components/ui/Link.astro
+++ b/src/components/ui/Link.astro
@@ -58,10 +58,10 @@ rel = [...relsSet].join(' ');
 <style>
 	a {
 		text-decoration: none;
-		transition-duration: var(--duration-md);
+		transition-duration: var(--d-md);
 
 		&:hover {
-			opacity: var(--opacity-md);
+			opacity: var(--o-md);
 		}
 
 		&:active {
@@ -69,9 +69,9 @@ rel = [...relsSet].join(' ');
 		}
 
 		&:not(:has(img, svg)) {
-			padding-block-end: var(--border-md);
-			color: var(--primary);
-			border-block-end: var(--border-md) solid var(--primary);
+			padding-block-end: var(--b-md);
+			color: var(--p);
+			border-block-end: var(--b-md) solid var(--p);
 		}
 	}
 </style>
