--- a/src/components/app/Header.astro
+++ b/src/components/app/Header.astro
@@ -53,7 +53,7 @@ const props = Astro.props;
 		svg {
 			width: 10rem;
 			height: fit-content;
-			filter: var(--drop-shadow-md);
+			filter: var(--s-drop-md);
 		}
 
 		> p {
