--- a/src/components/ui/Alert.astro
+++ b/src/components/ui/Alert.astro
@@ -29,16 +29,16 @@ const props = Astro.props;
 		flex-direction: column;
 		gap: var(--p-sm);
 		padding: var(--p-md);
-		border-radius: var(--radius-md);
-		border: var(--border-md) solid var(--primary);
+		border-radius: var(--r-md);
+		border: var(--b-md) solid var(--p);
 
 		strong {
 			display: inline-flex;
 			flex-direction: row;
 			align-items: center;
 			gap: var(--p-xs);
-			color: var(--primary);
-			font-family: var(--font-header);
+			color: var(--p);
+			font-family: var(--f-header);
 		}
 
 		p {
