--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -23,15 +23,15 @@ const props = Astro.props;
 
 		&:hover {
 			> label {
-				transition-duration: var(--duration-md);
+				transition-duration: var(--d-md);
 
 				&:has(> input) {
-					opacity: var(--opacity-md);
+					opacity: var(--o-md);
 				}
 
 				&:has(> input:hover) {
 					opacity: 1;
-					box-shadow: var(--box-shadow-md);
+					box-shadow: var(--s-box-md);
 				}
 			}
 		}
