--- a/src/components/ui/Output.astro
+++ b/src/components/ui/Output.astro
@@ -38,13 +38,13 @@ const { id, ...restProps } = Astro.props;
 	}
 
 	output {
-		font-family: var(--font-header);
-		font-size: var(--font-lg);
-		font-weight: var(--bold);
+		font-family: var(--f-header);
+		font-size: var(--f-lg);
+		font-weight: var(--f-bold);
 		contain: content;
 	}
 
 	.pulse {
-		animation: pulse var(--duration-md) ease-out;
+		animation: pulse var(--d-md) ease-out;
 	}
 </style>
