--- a/src/layouts/SocialPreviewLayout.astro
+++ b/src/layouts/SocialPreviewLayout.astro
@@ -58,8 +58,8 @@ const { type } = Astro.props;
 
 <style>
 	/* Use stronger shadows than the default */
-	body {
-		--shadow: oklch(0 0 0) !important;
+	:root {
+		--s: oklch(0 0 0) !important;
 	}
 
 	main {
@@ -88,7 +88,7 @@ const { type } = Astro.props;
 
 	p {
 		margin: 0 var(--p-md);
-		font-size: var(--font-lg);
+		font-size: var(--f-lg);
 	}
 
 	section {
@@ -105,9 +105,9 @@ const { type } = Astro.props;
 		flex: 1;
 		height: 65vh;
 		width: 40vw;
-		margin-block-end: calc(-1 * var(--radius-md));
-		border-radius: var(--radius-md);
-		box-shadow: var(--box-shadow-lg);
+		margin-block-end: calc(-1 * var(--r-md));
+		border-radius: var(--r-md);
+		box-shadow: var(--s-box-lg);
 		overflow: hidden;
 
 		&:nth-of-type(1) {
@@ -117,7 +117,7 @@ const { type } = Astro.props;
 
 		&:nth-of-type(2) {
 			transform-origin: 50% 100%;
-			border: var(--border-md) solid var(--primary);
+			border: var(--b-md) solid var(--p);
 			z-index: 1;
 		}
 
